# YoutubeDownloader

./: .gitignore  development_log.md  main.py  pyproject.toml
youtubedownload/: README.md  api.py  downloader.py  main.py  pyproject.toml
youtubedownload/frontend/: app.js  index.html  styles.css
